[#39] Implement Chat realtime